--- a/src/index.css
+++ b/src/index.css
@@ -76,8 +76,10 @@ cursor: pointer;}
 @media (min-width:650px){
 .sideBar{width:30vw;
 translate: 0%;}
-.sideBar img{display:none}
-.spaceImg{width:70vw}
+.sideBar img{
+  display:none}
+.spaceImg{
+  width:70vw}
 .lastList{display:none}
 nav ul{justify-content: flex-start;}
 nav ul li{margin:20px 20px;
