--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 *{
   margin:0;
   padding:0;
-  box-sizing: border-box;
+ box-sizing: border-box;
 }
 body{height:100vh;
 width:100vw;
@@ -22,23 +22,42 @@ nav ul{
   list-style: none;
   }
 nav ul li{
-  margin:20px 10px;
+  margin-top:20px;
+  margin-right: 20px;
+  margin-left: 25px;
   cursor: pointer;
-  font-size: 0.7rem;
+  font-size: 1rem;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  z-index: 40;
+  
 }
 nav ul li img{
   width:20px}
 
 
-.lastList{
-  display: flex;
-  align-items: center;
-  
+.factContainer{
+  position: absolute;
+  background-color: rgba(21, 20, 23,0.8);
+  color:#ebe9e7;
+  width:80vw;
+  padding:15px;
+  border-radius: 5px;
+  left:30px;
+  top:70px
+}
+.factContainer span a{
+  color:rgb(193, 193, 254);
+  font-size: 0.7rem;
+  float:right
 }
 
 .spaceImg{width:100vw;
 height:100vh;
-object-fit: cover;}
+object-fit:cover;
+
+}
 
 .sideBar{
   position: absolute;
@@ -50,7 +69,7 @@ object-fit: cover;}
   padding:20px;
   text-align:justify;
   flex-direction: column;
-  width:60vw;
+  width:70vw;
   background-color: rgb(21, 20, 23);
   color:white;
   box-shadow: 0 0 20px 3px black;
@@ -70,7 +89,7 @@ cursor: pointer;
   position: absolute;
   bottom:0;
   left:0;
-  padding:20px 10px;
+  padding:20px 20px;
   color:#ebe9e7;
   font-size: 0.7rem;
   background: linear-gradient(360deg,rgba(6, 6, 6, 0.692),rgba(6, 6, 6, 0.355),rgba(255, 255, 255, 0));
@@ -90,7 +109,7 @@ cursor: pointer;
   display:flex;
   align-items: center;
 }
-.infoContainer{background-color: black;
+.infoContainer{background-color: rgba(21, 20, 23,0.8);
 padding: 10px;
 border-radius: 5px;
 position: absolute;
@@ -100,26 +119,55 @@ margin-right: 10px;
 box-shadow: 0 0 20px 3px black;
 width:60vw}
 
+.noDataDiv{width:100vw;
+height:100vh;
+background-color: rgb(21, 20, 23);
+display: flex;
+align-items: center;
+justify-content: center;}
+.noDataDiv img{
+  animation: spin 2s linear infinite;
+  opacity: 0.8;
+}
+@keyframes spin {
+  0%{transform: rotate(0deg)}
+  100%{transform: rotate(360deg);}
+}
+
 @media (min-width:650px){
 .sideBar{width:40vw;
-translate: 0%;}
+translate: 0%;
+
+}
 .sideBar img{
   display:none}
  .sideBar p{font-size: 0.7rem;}
  
 .spaceImg{
-  width:60vw}
+  width:60vw;
+}
 .lastList{display:none}
 nav ul{justify-content: flex-start;}
 nav ul li{margin:20px 20px;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 .footer{padding:20px 20px;
 font-size: 1rem;}
 .footer p{font-size: 0.8rem;}
 .footer img{width:30px}
-.infoContainer{width:50vw;
+.infoContainer{width:30vw;
 bottom:70px;
-right:calc(30vw + 50px)}
+left:calc(20vw + 50px);
+}
+.factContainer{width:50vw;
+left:20px}
 }
   
+@media (max-width:450px){
+  .sideBar{width:80vw}
+  .sideBar p{font-size: 0.6rem;}
+}
+
+@media (min-width:1100px){
+  .sideBar p{font-size: 0.85rem;}
+}
