--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 body{height:100vh;
 width:100vw;
 font-family: "Space Mono", monospace;
+overflow: hidden;
 }
 
 nav{
@@ -52,10 +53,10 @@ nav ul li img{
   font-size: 0.7rem;
   float:right
 }
-
+.imgContainer{background-color: rgb(21, 20, 23);}
 .spaceImg{width:100vw;
 height:100vh;
-object-fit:cover;
+object-fit:contain;
 
 }
 
