--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,8 @@ nav ul li img{
   padding:15px;
   border-radius: 5px;
   left:30px;
-  top:70px
+  top:70px;
+  box-shadow: 0 0 20px 3px black;
 }
 .factContainer span a{
   color:rgb(193, 193, 254);
@@ -79,7 +80,7 @@ object-fit:contain;
   translate: 100%;
   z-index: 40;
 }
-.sideBar p{font-size: 0.8rem;}
+.sideBar p{font-size: 0.9rem;}
 
 
 .sideBar img{width:30px;
