--- a/src/index.css
+++ b/src/index.css
@@ -64,12 +64,15 @@ object-fit:contain;
 
 .sideBar{
   position: absolute;
+  overflow-y: auto;
+  
   top:0;
   bottom:0;
   right:0;
   display: flex;
   gap:20px;
   padding:20px;
+
   text-align:justify;
   flex-direction: column;
   width:70vw;
@@ -80,7 +83,7 @@ object-fit:contain;
   translate: 100%;
   z-index: 40;
 }
-.sideBar p{font-size: 0.8rem;}
+.sideBar p{font-size: 0.9rem;}
 
 
 .sideBar img{width:30px;
@@ -144,7 +147,7 @@ translate: 0%;
 }
 .sideBar img{
   display:none}
- .sideBar p{font-size: 0.7rem;}
+ .sideBar p{font-size: 0.9rem;}
  
 .spaceImg{
   width:60vw;
@@ -168,7 +171,7 @@ left:20px}
   
 @media (max-width:450px){
   .sideBar{width:80vw}
-  .sideBar p{font-size: 0.8rem;}
+  .sideBar p{font-size: 0.9rem;}
 }
 
 @media (min-width:1100px){
