--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ nav ul li img{
   float:right
 }
 .imgContainer{background-color: rgb(21, 20, 23);
+  height: 100vh;
 }
 .spaceImg{width:100vw;
 height:100vh;
